Fixed Mobile Content Spacing

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,11 @@
         width: 20vw;
     }
     
+    .page-content {
+        margin-left: 20vw;
+        padding-left: 10px;
+    }
+    
     @media screen {
         body>div#left-sidebar {
             position: fixed;
@@ -244,6 +249,9 @@
             margin-left: 10px;
             margin-right: 10px;
         }
+        .page-content {
+            margin-left: 0vw;
+        }
     }
     /*Business Card Css */
     
@@ -288,7 +296,7 @@
     
     @media (min-width: 1200px) {
         .container {
-            width: 85vw;
+            width: 92vw;
         }
     }
     
@@ -307,11 +315,6 @@
         .media-heading {
             text-align: center;
         }
-    }
-    
-    .page-content {
-        margin-left: 20vw;
-        padding-left: 10px;
     }
     
     #random-photo {
